# SciRag

./: .gitignore  PLAN.md  README.md  docker-compose.yml  pyproject.toml
data/: README.md
raw/papers/: seed_manifest.json
scripts/: build_citation_graph.py  build_flat_index.py  compile_first_10.py  download_datasets.py  download_seed_papers.py  grobid_smoke_test.py  process_qasper.py  run_qasper_baseline.py
src/evaluation/: qasper_eval.py
src/llm/: client.py
src/pipeline/: chunker.py  embedder.py  grobid_client.py  s2_client.py
src/retrieval/: flat_index.py
src/wiki/: summarizer.py
tests/: test_chunker_embedder.py  test_flat_index.py  test_grobid_client.py  test_llm_client.py  test_qasper_eval.py  test_s2_client.py
wiki/.obsidian/: app.json
wiki/papers/: REVIEW_NOTES.md
