[project]
name = "scirag"
version = "0.1.0"
description = "LLM-compiled scientific knowledge base with section-aware retrieval"
requires-python = ">=3.11"
dependencies = [
    # PDF parsing
    "pymupdf>=1.24.0",

    # Embeddings & models
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "sentence-transformers>=3.0.0",

    # Vector store
    "qdrant-client>=1.9.0",

    # LLM providers
    "ollama>=0.3.0",

    # Citation graph
    "networkx>=3.3",
    "requests>=2.31.0",

    # Orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # Search
    "rank-bm25>=0.2.2",

    # Data handling
    "datasets>=2.19.0",
    "pandas>=2.2.0",

    # Evaluation
    "scikit-learn>=1.4.0",

    # Wiki / UI
    "streamlit>=1.35.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
openai = ["openai>=1.30.0"]
dev = ["pytest>=8.0.0", "ruff>=0.4.0", "ipython>=8.0.0"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
